--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="wrapper bg-slate-50 py-10 px-3">
     <!-- box start  -->
     <div
-      class="box shadow rounded-xl  lg:w-[1060px] md:w-[980px] max-w-full m-auto bg-[url('../img/img.jpg')] bg-cover bg-no-repeat bg-left-top sm:pt-0 pt-80">
+      class="box shadow rounded-xl  lg:w-[1060px] md:w-[980px] max-w-full m-auto md:bg-[url('../img/img.jpg')] bg-[url('../img/img.jpg')] bg-cover bg-no-repeat md:bg-left-top bg-center sm:pt-0 pt-80">
       <div class="contentArea lg:w-[800px] md:w-[750px] ml-auto bg-white rounded-xl sm:p-10 p-5">
         <h4 class="sm:text-3xl text-xl font-semibold mb-5">Get the app for real-time approval notifications</h4>
         <p class="sm:text-2xl text-base mb-5">Like millions of others, download the app and get a notification to know
